<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:id="@+id/titleGeolocation" android:text="@string/titleGeolocation"></TextView>
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="match_parent" android:id="@+id/linearLayout2"
		android:layout_gravity="center_vertical" android:baselineAligned="true">
		<TextView android:layout_height="wrap_content" android:id="@+id/txtGeolocation"
			android:layout_width="wrap_content" android:layout_gravity="fill_horizontal"
			android:layout_weight="1" android:text="@string/txtNoData"></TextView>
		<Button android:layout_height="wrap_content"
			android:layout_gravity="center_vertical" android:layout_weight="1"
			android:layout_width="wrap_content" android:id="@+id/btnLocate"
			android:text="@string/txtLocate"></Button>
	</LinearLayout>
	<TextView android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:id="@+id/titleObfuscationLevel" android:text="@string/titleObfuscationLevel"
		android:layout_marginTop="5dip"></TextView>
	<LinearLayout android:layout_width="match_parent"
		android:id="@+id/linearLayout1" android:layout_height="wrap_content"
		android:orientation="horizontal" android:layout_gravity="center_horizontal"
		android:weightSum="1.0">
		<SeekBar android:layout_weight=".69" android:layout_width="0dip"
			android:layout_height="wrap_content" android:id="@+id/seekBarObfuscationLevel"
			android:layout_gravity="center_vertical"></SeekBar>
		<TextView android:layout_weight=".3" android:layout_width="0dip"
			android:layout_height="wrap_content" android:text="TextView"
			android:id="@+id/txtObfuscationLevel" android:layout_gravity="center"></TextView>
	</LinearLayout>
	<TextView android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:id="@+id/titleMode" android:text="@string/titleMode"
		android:layout_marginTop="5dip"></TextView>
	<Spinner android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/spinnerMode"></Spinner>
	<Button android:layout_height="wrap_content"
		android:layout_width="match_parent" android:id="@+id/btnObfuscate"
		android:text="@string/txtObfuscate"></Button>
	<TextView android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:id="@+id/titleObfuscationResults" android:text="@string/titleObfuscationResults"
		android:layout_marginTop="5dip"></TextView>
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/txtObfuscationResults"
		android:text="@string/txtNoData"></TextView>
	<ViewStub android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:id="@+id/stubWaiting"
		android:inflatedId="@+id/panel_add" android:layout="@layout/progress_overlay"></ViewStub>
</LinearLayout>
